fix h1 width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,9 @@ body > footer a {
 
 /* Small devices (landscape phones, 544px and up) */
 @media (max-width: 992px) {
+    .content > h1 img {
+        width: 90%;
+    }
 
     .content {
         margin-bottom: 100px;
